@@ -26,7 +26,7 @@
 
 /* pad - create a sparse file of the indicated size */
 
-#ifdef linux
+#if defined(linux) || defined(sun) || defined(UNIXWARE) || defined(__hpux)
 #define _LARGEFILE_SOURCE 
 #define _FILE_OFFSET_BITS 64
 #endif
