@@ -95,7 +95,7 @@ in an appropriately equipped lab.
 .B Scrub
 .I "nnsa"
 patterns are reasonable for sanitizing modern PRML/EPRML encoded disk devices.
-For older MFM/RLL encoded drives, the shred(1) program from GNU binutils 
+For older MFM/RLL encoded drives, the shred(1) program from GNU coreutils
 does a more thorough and scientific (but more I/O intensive) job of secure 
 deletion, as described in Guttman below.
 .PP
